# NR2iCal

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  global.d.ts  index.js  package-lock.json  package.json
migrations/: 20221002110036_init.sql
src/: main.rs  naver_reservation.rs
