[package]
name = "nr2i_cal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
env_logger = "0.9.0"
reqwest = { version = "0.11.11", features = ["json", "cookies"] }
serde = "1.0.144"
serde_json = "1.0.83"
tokio = {version = "1.20.1", features = ["full"]}
