[package]
name = "nr2i_cal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
axum = "0.5.16"
chrono = { version = "0.4.22", features = ["serde"] }
env_logger = "0.9.0"
ics = "0.5.8"
itertools = "0.10.5"
reqwest = { version = "0.11.11", features = ["json", "cookies"] }
serde = "1.0.144"
serde_json = "1.0.83"
serde_with = "2.0.1"
sqlx = { version = "0.6.2", features = ["macros", "runtime-tokio-rustls", "sqlite", "chrono", "json"] }
tokio = {version = "1.20.1", features = ["full"]}
